Tweaked values to make sure tooltips remained largely visible on all screen sizes

--- a/client/src/css/Telesession.css
+++ b/client/src/css/Telesession.css
@@ -4,6 +4,7 @@
 
 .Telesession {
   > .left-column {
+    overflow: visible;
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
